--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,9 @@
-* {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
+body {
+      padding: 10%;
+      font-size: 2rem;
+      
 }
 
-
-.container {
-      border: 10px double red;
-      border-radius: 15px;
-      font-size: 1.5rem;
-      /* margin-top: 1.5em;
-      margin-right: 2em;
-      margin-bottom: 2em;
-      margin-left: 2em; */
-      margin: 1.5em;
-      padding: 1.5em;
-      outline: 5px solid darkgreen;
-      outline-offset: -8px;
-}
-
-.circle {
-      margin: 3rem auto;
-      background-color: blue;
-      width: 100px;
-      height: 100px;
-      border: 2px solid #000;
-      border-radius: 50px;
-      outline: 2px solid red;
-      outline-offset: 0.25rem;
-}
+/* input, button {
+      font: inherit;
+} */
